--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detective-Pinnwand</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/jsPlumb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.js"></script>
+</head>
+<body>
+    <h1>Detective-Pinnwand</h1>
+    <div id="board">
+        <div class="item" id="person1" style="top: 50px; left: 50px;">🕵️‍♂️ Person A</div>
+        <div class="item" id="clue1" style="top: 200px; left: 300px;">🔎 Hinweis 1</div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
