--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <h1>Detective-Pinnwand</h1>
-    <button onclick="addItem()">Neues Element</button>
-    <button onclick="saveBoard()">Speichern</button>
-    <button onclick="loadBoard()">Laden</button>
+    <button id="addItemButton">Neues Element</button>
+    <button id="saveBoardButton">Speichern</button>
+    <button id="loadBoardButton">Laden</button>
     <div id="board"></div>
     <script src="script.js"></script>
 </body>
