--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detective-Pinnwand</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/jsPlumb.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/js/jsplumb.min.js" defer></script>
+    <script src="script.js" defer></script>
+
 </head>
 <body>
     <h1>Detective-Pinnwand</h1>
@@ -14,6 +16,5 @@
     <button id="saveBoardButton">Speichern</button>
     <button id="loadBoardButton">Laden</button>
     <div id="board"></div>
-    <script src="script.js"></script>
 </body>
 </html>
