--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="addItemButton">Neues Element</button>
     <button id="saveBoardButton">Speichern</button>
     <button id="loadBoardButton">Laden</button>
+    <button id="connectModeButton">Verbindungsmodus</button>
     <div id="board"></div>
 </body>
 </html>
