--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button id="saveBoardButton">Speichern</button>
     <button id="loadBoardButton">Laden</button>
     <button id="connectModeButton">Verbindungsmodus</button>
+    <button id="resetBoardButton">Zurücksetzen</button>
     <div id="board"></div>
 </body>
 </html>
